fix header vertical align

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -123,6 +123,7 @@
       white-space: nowrap;
       width: inherit;
       font-size: 18px;
+      margin-bottom: 0;
     }
 
     .#{$module}keyword {
